# tp-mde

./: .gitignore  .gitmodules  notes.md
generic-implementation-c/: Makefile  README.md  main.c  pile.c  pile.h
op-implementation-c/: Makefile  ObjetGraphique.c  ObjetGraphique.h  README.md  main.c
tp5/: CMakeLists.txt  README.md  compute_pi.sh
tp5/lib/: build.sh
tp5/rapport/: Makefile  rapport.tex
tp5/src/: gattaca.cpp  gattaca.hpp  main.cpp  pi.cpp  pi.hpp  status.cpp  status.hpp  utils.hpp
